# multi-platform-template

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/base/: rb_base.h
app/src/main/cpp/imgui/: text_editor.cpp  text_editor.h
app/src/main/cpp/myapp/: ml_myapp.cpp  ml_myapp.hpp  myapp.cpp
playground/: CMakeLists.txt  README.md
playground/src/: platform_mac.c  rb_sdl.cpp
